Marking up original price more semantic for product detail view

--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -292,7 +292,8 @@
       &.detail-view__meta__sale-price {
         color: $color-brand;
 
-        span {
+        /* Original price */
+        s {
           color: $color-dark-txt;
           text-decoration: line-through;
         }
