Added promo tiles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -145,6 +145,7 @@ Global stylesheet
 @import "partials/modules/map-google-static";
 @import "partials/modules/social-follow";
 @import "partials/modules/fine-print";
+@import "partials/modules/promo-tile";
 
   /* Modules -> Widgets */
   @import "partials/modules/widgets/accordion";
