--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -395,11 +395,13 @@
       <%# Shopping hours box %>
       <div class="promo-tile box">
         <img src="http://placehold.it/600x132">
-        <span class="promo-tile__icon-main icon icon--hours" aria-hidden="true"></span>
+        <span class="promo-tile__icon-main icon icon--hours icon--flush-top" aria-hidden="true"></span>
         <div class="islet island--non-palm">
           <h2 class="promo-tile__hdr">Opening Hours</h2>
-          <p>We have a great range of fantastic retailers to choose from.</p>
-          <a href="#">Check Shopping Hours</a>
+          <div class="txt-formatted">
+            <p>We have a great range of fantastic retailers to choose from.</p>
+            <a href="#">Check Shopping Hours</a>
+          </div>
         </div>
       </div>
       <%# //Shopping hours box %>
@@ -409,11 +411,13 @@
       <%# Centre services box %>
       <div class="promo-tile box">
         <img src="http://placehold.it/600x132">
-        <span class="promo-tile__icon-main icon icon--service" aria-hidden="true"></span>
+        <span class="promo-tile__icon-main icon icon--service icon--flush-top" aria-hidden="true"></span>
         <div class="islet island--non-palm">
           <h2 class="promo-tile__hdr">Centre Services</h2>
-          <p>Travelling to <%= @centre.short_name %>?<br> We have all your parking &amp; transport needs covered.</p>
-          <a href="#">Get Directions</a>
+          <div class="txt-formatted">
+            <p>Travelling to <%= @centre.short_name %>?<br> We have all your parking &amp; transport needs covered.</p>
+            <a href="#">Get Directions</a>
+          </div>
         </div>
       </div>
       <%# //Centre services box %>
