--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -23,10 +23,10 @@
   </style>
 <% end %>
 
-<div class="nav-contextual">
+<div class="nav-contextual js-nav-contextual">
   <div class="nav-contextual__clip">
     <div class="nav-contextual__clip-inner">
-      <ul class="nav-contextual__list horiz-list">
+      <ul class="nav-contextual__list horiz-list js-list">
         <li>
           <a href="#getting-here">Getting Here</a>
         </li>
@@ -47,9 +47,16 @@
         </li>
       </ul>
     </div>
-    <span class="nav-contextual__clip-overlay icon icon--arrow-right icon--mega icon--flush-top" aria-hidden="true"></span>
+    <span class="nav-contextual__clip-overlay icon icon--arrow-right icon--mega icon--flush-top js-clip" aria-hidden="true"></span>
   </div>
 </div>
+<% content_for :javascript do %>
+  <script type="text/javascript">
+    $('.js-nav-contextual').navContextual();
+  </script>
+<% end -%>
+
+
 
 <%# Text formatted %>
 <div class="txt-formatted">
