Small updates to JS for nav-contextual

--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -47,7 +47,7 @@
         </li>
       </ul>
     </div>
-    <span class="nav-contextual__clip-overlay icon icon--arrow-right icon--mega icon--flush-top js-clip" aria-hidden="true"></span>
+    <span class="nav-contextual__clip-overlay icon icon--arrow-right icon--mega icon--flush-top js-clip-overlay" aria-hidden="true"></span>
   </div>
 </div>
 <% content_for :javascript do %>
