--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -94,7 +94,7 @@
   <!-- Available Colours -->
   <%- if @product.available_colours.present? -%>
   <div class="detail-view__divider--top-non-palm grid__item non-palm-two-fifths">
-    <div class="island island--btm-palm">
+    <div class="island island--flush-btm-palm">
       <h2 class="detail-view__hdr-sub hn">Available Colours</h2>
       <ul class="horiz-list horiz-list--comma"><!--
         <%- @product.available_colours.each do |colour| -%>
