--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -237,156 +237,160 @@
   <%# //Notices %>
 
   <%# Contact Us %>
-  <%# [BACKEND] Contact Us section should not populate if there are no contact info %>
-  <h2 id="contact-us">Contact Us</h2>
-  <div class="grid grid--gutter-dbl grid--mrg-dbl-non-palm">
+  <% if @centre.phone_number.present? or @centre.email_address.present? %>
+    <h2 id="contact-us">Contact Us</h2>
+    <div class="grid grid--gutter-dbl grid--mrg-dbl-non-palm">
 
-    <%# Phone number %>
-    <% if @centre.phone_number.present? %>
-      <div class="grid__item non-palm-one-half">
-        <%# Show centre number if at non-palm size %>
-        <div class="box island txt-center hide-fully--palm" itemscope itemtype="http://schema.org/Organization">
-          <span class="icon icon--phone2 icon--kilo icon--spacing-lrg" aria-hidden="true"></span>
-          <span class="hide-visually">Phone number</span>
-          <span itemprop="telephone"><%= @centre.phone_number %></span>
+      <%# Phone number %>
+      <% if @centre.phone_number.present? %>
+        <div class="grid__item non-palm-one-half">
+          <%# Show centre number if at non-palm size %>
+          <div class="box island txt-center hide-fully--palm" itemscope itemtype="http://schema.org/Organization">
+            <span class="icon icon--phone2 icon--kilo icon--spacing-lrg" aria-hidden="true"></span>
+            <span class="hide-visually">Phone number</span>
+            <span itemprop="telephone"><%= @centre.phone_number %></span>
+          </div>
+
+          <%# Show CTA button for centre contact number %>
+          <span class="hide-fully--non-palm">
+            <a href="tel:<%= (@centre.phone_number || "").gsub(/\s+/,'') %>" class="txt-center btn btn--full btn--main btn--main-alt2 btn--main-lrg">
+              <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
+              <strong>Call <%= @centre.short_name %> Centre</strong></a>
+          </span>
         </div>
+      <% end %>
+      <%# //Phone number %>
 
-        <%# Show CTA button for centre contact number %>
-        <span class="hide-fully--non-palm">
-          <a href="tel:<%= (@centre.phone_number || "").gsub(/\s+/,'') %>" class="txt-center btn btn--full btn--main btn--main-alt2 btn--main-lrg">
-            <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
-            <strong>Call <%= @centre.short_name %> Centre</strong></a>
-        </span>
-      </div>
-    <% end %>
-    <%# //Phone number %>
-
-    <% if @centre.email_address.present? %>
-      <div class="grid__item non-palm-one-half">
-        <div class="box island txt-center txt-truncate">
-          <span class="icon icon--email icon--kilo icon--spacing-lrg" aria-hidden="true"></span>
-          <span class="hide-visually">Email</span>
-          <a href="mailto:<%= @centre.email_address %>"><%= @centre.email_address %></a>
+      <% if @centre.email_address.present? %>
+        <div class="grid__item non-palm-one-half">
+          <div class="box island txt-center txt-truncate">
+            <span class="icon icon--email icon--kilo icon--spacing-lrg" aria-hidden="true"></span>
+            <span class="hide-visually">Email</span>
+            <a href="mailto:<%= @centre.email_address %>"><%= @centre.email_address %></a>
+          </div>
         </div>
-      </div>
-    <% end %>
-  </div>
+      <% end %>
+    </div>
+  <% end %>
   <%# //Contact Us %>
 
   <%# Follow Us - title %>
-  <%# [BACKEND] If no social media from centre, don't output title %>
     <%# Need mrg-base spacing class as the :last-child on txt-formatted removed the margin %>
-    <h2 id="follow-us" class="mrg-base">Follow Us</h2>
+    <% if social_media.present? %>
+      <h2 id="follow-us" class="mrg-base">Follow Us</h2>
+    <% end %>
   <%# //Follow Us - title %>
 </div>
 <%# //Text formatted %>
 
 <%# Follow Us - list of social media %>
-<div class="divider">
-  <ul class="grid grid--mrg-base-non-palm txt-formatted__list-unstyled">
-    <%# Facebook %>
-    <% if @centre.facebook.present? %>
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="<%= @centre.facebook %>" class="flag social-follow" rel="external">
-          <div class="flag__image">
-            <div class="box islet">
-              <span class="icon icon--facebook icon--dark" aria-hidden="true"></span>
+<% if social_media.present? %>
+  <div class="divider">
+    <ul class="grid grid--mrg-base-non-palm txt-formatted__list-unstyled">
+      <%# Facebook %>
+      <% if @centre.facebook.present? %>
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.facebook %>" class="flag social-follow" rel="external">
+            <div class="flag__image">
+              <div class="box islet">
+                <span class="icon icon--facebook icon--dark" aria-hidden="true"></span>
+              </div>
             </div>
-          </div>
-          <div class="flag__body">
-            Facebook
-          </div>
-        </a>
-      </li>
-    <% end %>
-    <%# //Facebook %>
+            <div class="flag__body">
+              Facebook
+            </div>
+          </a>
+        </li>
+      <% end %>
+      <%# //Facebook %>
 
-    <%# Twitter %>
-    <% if @centre.twitter.present? %>
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="<%= @centre.twitter %>" class="flag social-follow" rel="external">
-          <div class="flag__image">
-            <div class="box islet">
-              <span class="icon icon--twitter icon--dark" aria-hidden="true"></span>
+      <%# Twitter %>
+      <% if @centre.twitter.present? %>
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.twitter %>" class="flag social-follow" rel="external">
+            <div class="flag__image">
+              <div class="box islet">
+                <span class="icon icon--twitter icon--dark" aria-hidden="true"></span>
+              </div>
             </div>
-          </div>
-          <div class="flag__body">
-            Twitter
-          </div>
-        </a>
-      </li>
-    <% end %>
-    <%# //Twitter %>
+            <div class="flag__body">
+              Twitter
+            </div>
+          </a>
+        </li>
+      <% end %>
+      <%# //Twitter %>
 
-    <%# Instagram %>
-    <% if @centre.instagram.present? %>
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="<%= @centre.instagram %>" class="flag social-follow" rel="external">
-          <div class="flag__image">
-            <div class="box islet">
-              <span class="icon icon--instagram icon--dark" aria-hidden="true"></span>
+      <%# Instagram %>
+      <% if @centre.instagram.present? %>
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.instagram %>" class="flag social-follow" rel="external">
+            <div class="flag__image">
+              <div class="box islet">
+                <span class="icon icon--instagram icon--dark" aria-hidden="true"></span>
+              </div>
             </div>
-          </div>
-          <div class="flag__body">
-            Instragram
-          </div>
-        </a>
-      </li>
-    <% end %>
-    <%# //Instagram %>
+            <div class="flag__body">
+              Instagram
+            </div>
+          </a>
+        </li>
+      <% end %>
+      <%# //Instagram %>
 
-    <%# Pinterest %>
-    <% if @centre.pinterest.present? %>
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="<%= @centre.pinterest %>" class="flag social-follow" rel="external">
-          <div class="flag__image">
-            <div class="box islet">
-              <span class="icon icon--pinterest icon--dark" aria-hidden="true"></span>
+      <%# Pinterest %>
+      <% if @centre.pinterest.present? %>
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.pinterest %>" class="flag social-follow" rel="external">
+            <div class="flag__image">
+              <div class="box islet">
+                <span class="icon icon--pinterest icon--dark" aria-hidden="true"></span>
+              </div>
             </div>
-          </div>
-          <div class="flag__body">
-            Pinterest
-          </div>
-        </a>
-      </li>
-    <% end %>
-    <%# //Pinterest %>
+            <div class="flag__body">
+              Pinterest
+            </div>
+          </a>
+        </li>
+      <% end %>
+      <%# //Pinterest %>
 
-    <%# YouTube %>
-    <% if @centre.youtube.present? %>
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="<%= @centre.youtube %>" class="flag social-follow" rel="external">
-          <div class="flag__image">
-            <div class="box islet">
-              <span class="icon icon--youtube icon--dark" aria-hidden="true"></span>
+      <%# YouTube %>
+      <% if @centre.youtube.present? %>
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.youtube %>" class="flag social-follow" rel="external">
+            <div class="flag__image">
+              <div class="box islet">
+                <span class="icon icon--youtube icon--dark" aria-hidden="true"></span>
+              </div>
             </div>
-          </div>
-          <div class="flag__body">
-            YouTube
-          </div>
-        </a>
-      </li>
-    <% end %>
-    <%# //YouTube %>
+            <div class="flag__body">
+              YouTube
+            </div>
+          </a>
+        </li>
+      <% end %>
+      <%# //YouTube %>
 
-    <%# Google+ %>
-    <% if @centre.google_plus.present? %>
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="<%= @centre.google_plus %>" class="flag social-follow" rel="external">
-          <div class="flag__image">
-            <div class="box islet">
-              <span class="icon icon--google-plus icon--dark" aria-hidden="true"></span>
+      <%# Google+ %>
+      <% if @centre.google_plus.present? %>
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.google_plus %>" class="flag social-follow" rel="external">
+            <div class="flag__image">
+              <div class="box islet">
+                <span class="icon icon--google-plus icon--dark" aria-hidden="true"></span>
+              </div>
             </div>
-          </div>
-          <div class="flag__body">
-            Google Plus
-          </div>
-        </a>
-      </li>
-    <% end %>
-    <%# //Google+ %>
-  </ul>
-</div>
+            <div class="flag__body">
+              Google Plus
+            </div>
+          </a>
+        </li>
+      <% end %>
+      <%# //Google+ %>
+    </ul>
+  </div>
+<% end %>
 <%# //Follow Us - list of social media %>
 
 <footer>
