Fixes after PR feedback

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,6 +64,7 @@ Global stylesheet
   @import "partials/utils/placeholders/arrows";
   @import "partials/utils/placeholders/box-shadows";
   @import "partials/utils/placeholders/hide";
+  @import "partials/utils/placeholders/new-block-formatting-context";
 
 /* Base */
 @import "partials/base/fonts";
