--- a/app/assets/stylesheets/partials/layout/grid/_grid.scss
+++ b/app/assets/stylesheets/partials/layout/grid/_grid.scss
@@ -68,20 +68,16 @@
 }
 
 /* Base margin of grid__item at non-palm */
-.grid--mrg-base-non-palm {
-	.grid__item {
-		@include respond-min($non-palm) {
-			@include to-rem(margin-bottom, $spacing-base);
-		}
+@include respond-min($non-palm) {
+	.grid--mrg-base-non-palm > .grid__item {
+		@include to-rem(margin-bottom, $spacing-base);
 	}
 }
 
 /* Double the bottom margin of grid__item at non-palm */
-.grid--mrg-dbl-non-palm {
-	.grid__item {
-		@include respond-min($non-palm) {
-			@include to-rem(margin-bottom, $spacing-dbl);
-		}
+@include respond-min($non-palm) {
+	.grid--mrg-dbl-non-palm > .grid__item {
+		@include to-rem(margin-bottom, $spacing-dbl);
 	}
 }
 
@@ -91,7 +87,7 @@
 	@include to-rem(margin-left, -$grid-gutter-dbl);
 
 	/* Grid item */
-	.grid__item {
+	> .grid__item {
 		@include to-rem(padding-left, $grid-gutter-dbl);
 	}
 }
