Move code to one line and add back ticks

--- a/app/assets/stylesheets/partials/abstractions/_slats.scss
+++ b/app/assets/stylesheets/partials/abstractions/_slats.scss
@@ -40,6 +40,4 @@
 		.slats__img img,
 		.slats__img--rev img {display: block;}
 
-	.slats__body {
-		@extend %new-block-formatting-context;
-	}
+	.slats__body {@extend %new-block-formatting-context;}
