--- a/app/assets/stylesheets/partials/modules/_centre-location.scss
+++ b/app/assets/stylesheets/partials/modules/_centre-location.scss
@@ -7,7 +7,7 @@
     Contains the Google static map of the centre and the centre addres
 
   Demo:
-    Style Guide -> Modules -> Centre Map
+    Style Guide -> Modules -> Centre Location
 */
 
 .centre-location {
