--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -132,9 +132,9 @@
       <li>
         <%= link_to centre_product_path(centre_id: centre.code, retailer_code: @product.retailer_code, sku: @product.sku),
           class: "list-divider" do %>
-          <span class="icon icon--pin icon--lrg icon--spacing-lrg icon--dark" aria-hidden="true"></span>
+          <span class="icon icon--pin icon--lrg icon--spacing-lrg icon--base" aria-hidden="true"></span>
           <%= centre.short_name %>
-          <span class="icon icon--arrow-right icon--lrg icon--dark" aria-hidden="true"></span>
+          <span class="icon icon--arrow-right icon--lrg icon--base" aria-hidden="true"></span>
         <%- end -%>
       </li>
     <%- end -%>
