--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -222,13 +222,13 @@
           <li>
               <%# [BACKEND] The first link in the list needs to have class `list-divider--first` %>
               <a href="#" class="list-divider list-divider--first txt-truncate">Lorem ipsum dolor sit amet, consectetur adipiscing elitLorem ipsumdolorsitametconsectetur adipiscinfelit
-              <span class="icon icon--arrow-right icon--lrg icon--dark" aria-hidden="true"></span>
+              <span class="icon icon--arrow-right icon--lrg icon--base" aria-hidden="true"></span>
             </a>
           </li>
           <li>
             <a href="#" class="list-divider txt-truncate">
               Quisque convallis leo at ligula ultricies
-              <span class="icon icon--arrow-right icon--lrg icon--dark" aria-hidden="true"></span>
+              <span class="icon icon--arrow-right icon--lrg icon--base" aria-hidden="true"></span>
             </a>
           </li>
         </ul>
@@ -292,7 +292,7 @@
           <a href="<%= @centre.facebook %>" class="flag social-follow" rel="external">
             <div class="flag__image">
               <div class="box islet">
-                <span class="icon icon--facebook icon--dark" aria-hidden="true"></span>
+                <span class="icon icon--facebook icon--base" aria-hidden="true"></span>
               </div>
             </div>
             <div class="flag__body">
@@ -309,7 +309,7 @@
           <a href="<%= @centre.twitter %>" class="flag social-follow" rel="external">
             <div class="flag__image">
               <div class="box islet">
-                <span class="icon icon--twitter icon--dark" aria-hidden="true"></span>
+                <span class="icon icon--twitter icon--base" aria-hidden="true"></span>
               </div>
             </div>
             <div class="flag__body">
@@ -326,7 +326,7 @@
           <a href="<%= @centre.instagram %>" class="flag social-follow" rel="external">
             <div class="flag__image">
               <div class="box islet">
-                <span class="icon icon--instagram icon--dark" aria-hidden="true"></span>
+                <span class="icon icon--instagram icon--base" aria-hidden="true"></span>
               </div>
             </div>
             <div class="flag__body">
@@ -343,7 +343,7 @@
           <a href="<%= @centre.pinterest %>" class="flag social-follow" rel="external">
             <div class="flag__image">
               <div class="box islet">
-                <span class="icon icon--pinterest icon--dark" aria-hidden="true"></span>
+                <span class="icon icon--pinterest icon--base" aria-hidden="true"></span>
               </div>
             </div>
             <div class="flag__body">
@@ -360,7 +360,7 @@
           <a href="<%= @centre.youtube %>" class="flag social-follow" rel="external">
             <div class="flag__image">
               <div class="box islet">
-                <span class="icon icon--youtube icon--dark" aria-hidden="true"></span>
+                <span class="icon icon--youtube icon--base" aria-hidden="true"></span>
               </div>
             </div>
             <div class="flag__body">
@@ -377,7 +377,7 @@
           <a href="<%= @centre.google_plus %>" class="flag social-follow" rel="external">
             <div class="flag__image">
               <div class="box islet">
-                <span class="icon icon--google-plus icon--dark" aria-hidden="true"></span>
+                <span class="icon icon--google-plus icon--base" aria-hidden="true"></span>
               </div>
             </div>
             <div class="flag__body">
@@ -403,7 +403,7 @@
         <div class="islet island--non-palm">
           <h2 class="promo-tile__hdr">Opening Hours</h2>
           <div class="txt-formatted">
-            <p>We have a great range of fantastic retailers to choose from.</p>
+            <p>Find out specific hours for our department stores.</p>
             <a href="#">Check Shopping Hours</a>
           </div>
         </div>
@@ -419,7 +419,7 @@
         <div class="islet island--non-palm">
           <h2 class="promo-tile__hdr">Centre Services</h2>
           <div class="txt-formatted">
-            <p>Travelling to <%= @centre.short_name %>?<br> We have all your parking &amp; transport needs covered.</p>
+            <p>Find out the full selection of services available.</p>
             <a href="#">Get Directions</a>
           </div>
         </div>
